--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,8 @@ version = "0.1.0"
 description = ""
 authors = [ "Ben <benjamin@selas.studio>"]
 readme = "README.md"
-dependencies = {python = "^3.9", torch = { version ="=1.12.0+cu113", source = "pytorch" }}
+dependencies = {python = "^3.9", einops = "^0.4.1", transformers = "^4.21.1"}
 
-[[tool.poetry.source]]
-name = "pytorch"
-url = "https://download.pytorch.org/whl/cu113/"
-secondary = true
 
 [build-system]
 requires = [ "relaxed-poetry-core>=0.1.2"]
